--- a/WebApiYo/WebApiYo/appsettings.json
+++ b/WebApiYo/WebApiYo/appsettings.json
@@ -2,7 +2,7 @@
   "connectionStrings": {
     //"defaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=WebApi2_2_Modulo7;Integrated Security=True",
     //"defaultConnection": "Data Source=13UNIPROES-03;Initial Catalog=WebApiYo;Integrated Security=True",
-    "defaultConnection": "Data Source=DESKTOP-FEJLUAI;Initial Catalog=WebApiYo;Integrated Security=True"
+    "defaultConnection": "Data Source=DESKTOP-FEJLUAI;Initial Catalog=ValuesDB;Integrated Security=True"
 
 
   },
